@@ -3,28 +3,22 @@
 [options]
 
 # This is the hostname used when generating tryton URI
-#hostname = 
-
-# Configure the IP address for trytond
-# If empty, the server will listen on all available interfaces
-#interface =
-
-# Activate the xml-rpc protocol
-#xmlrpc = False
-# Configure the port for the xml-rpc protocol to listen
-#xmlport = 8069
+#hostname =
 
 # Activate the json-rpc protocol
-#jsonrpc = True
-# Configure the port for the json-rpc protocol to listen
-#jsonport = 8000
+jsonrpc = localhost:8000
+#ssl_jsonrpc = False
+
 # Configure the path of json-rpc data
 #jsondata_path = /var/www/localhost/tryton
 
+# Activate the xml-rpc protocol
+#xmlrpc = *:8069
+#ssl_xmlrpc = False
+
 # Activate the webdav protocol
-#webdav = False
-# Configure the port for the webdav protocol to listen
-#webdavport = 8080
+#webdav = *:8080
+#ssl_webdav = False
 
 # Configure the database type
 # allowed values are postgresql, sqlite, mysql
@@ -51,10 +45,6 @@
 #pidfile = False
 #logfile = False
 
-# Enable secure connection with SSL
-#secure_xmlrpc = False
-#secure_jsonrpc = False
-#secure_webdav = False
 #privatekey = server.pem
 #certificate = server.pem
 
